--- a/styles/Meals.module.css
+++ b/styles/Meals.module.css
@@ -108,6 +108,89 @@
     padding: 5px;
     margin: 0 5px 5px 0;
   }
+
+  .gallery {
+    max-width: 90%;
+    margin: auto;
+    display: -ms-grid;
+    display: grid;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -ms-grid-columns: (minmax(20rem, 0.3fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(20rem, 0.3fr));
+    grid-auto-rows: 20rem;
+    gap: 1rem;
+  }
+  
+  .gallery-card {
+    overflow: hidden;
+    border-radius: 0.8rem;
+    cursor: pointer;
+    position: relative;
+    -webkit-box-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.1);
+            box-shadow: 0.5rem 0.5rem 0.5rem rgba(0, 0, 0, 0.1);
+  }
+  
+  .gallery-card__img {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -webkit-transition: -webkit-transform 250ms ease-out;
+    transition: -webkit-transform 250ms ease-out;
+    transition: transform 250ms ease-out;
+    transition: transform 250ms ease-out, -webkit-transform 250ms ease-out;
+  }
+  
+  .gallery-card__details {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background: rgba(249, 251, 255, 0.5);
+    -webkit-backdrop-filter: blur(2px) brightness(1.1);
+            backdrop-filter: blur(2px) brightness(1.1);
+    padding: 0.5rem;
+    opacity: 0;
+    -webkit-transition: opacity 350ms;
+    transition: opacity 350ms;
+  }
+  
+  .gallery-card__details h2 {
+    font-size: 2rem;
+    text-align: center;
+    line-height: 2rem;
+    color: #f9fbff;
+    text-shadow: 0 0 0.8rem #161d34;
+    position: relative;
+    top: 2rem;
+    -webkit-transition: top 350ms;
+    transition: top 350ms;
+  }
+  
+  .gallery-card:hover .gallery-card__img {
+    -webkit-transform: scale(1.1);
+            transform: scale(1.1);
+  }
+  
+  .gallery-card:hover .gallery-card__details {
+    opacity: 1;
+  }
+  
+  .gallery-card:hover .gallery-card__details h2 {
+    top: 0;
+  }
   
   @media (max-width: 800px) {
     .meals {
