UPDATE homepage & several changes

--- a/styles/Footer2.module.css
+++ b/styles/Footer2.module.css
@@ -16,6 +16,7 @@
 .footer-distributed {
 font-family: Roboto;
 position: fixed;
+/* top: 80%; */
 bottom: 0;
   background-color: #292c2f;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.12);
