--- a/styles/Nav2.module.css
+++ b/styles/Nav2.module.css
@@ -2,6 +2,8 @@
 .topnav {
     background-color: #333;
     overflow: hidden;
+    top: 0;
+    /* position: fixed; */
   }
   
   /* Style the links inside the navigation bar */
