--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,9 @@ body {
   background: #2d2013;
   color: #fff;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-  margin: 0;
+  /* margin: 0; */
+
+  margin-bottom: 100px;
 }
 
 a {
