--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,7 +9,7 @@ body {
   color: #fff;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   /* margin: 0; */
-
+  /* display: flex; */
   margin-bottom: 100px;
 }
 
