--- a/styles/Index.module.css
+++ b/styles/Index.module.css
@@ -15,6 +15,8 @@
 
   max-width: 1200px;
   margin: 40px 0;
+  display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
 }
 
 .container .card {
